shadowJar now works